k8s/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-swing-tutor-website
  namespace: default
  labels:
    app: java-swing-tutor-website
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: java-swing-tutor-website
